# nib-backend

./: .gitignore  CLAUDE.md  README.md  nib-api.postman_collection.json  openapi.yaml  pyproject.toml
.github/workflows/: db-access-apply.yml  db-access-destroy.yml  deploy-dev.yml  deploy-prod.yml  destroy-dev.yml  destroy-prod.yml  lambda-ci-dev.yml  lambda-deploy-prod.yml
docs/: NIB_Events_Pledges_API_Spec.md  NIB_Membership_Payments_API_Spec_v2.md  NIB_Missing_Member_Endpoints_Spec.md  NIB_Registration_Flow.md
functions/layer/: requirements.txt
infra/: README.md  main.tf  variables.tf
infra/db_access/: dev.tfvars  ec2.tf  iam.tf  main.tf  rds_access.tf  tfvars  variables.tf  vpc_endpoints.tf
infra/db_access/scripts/: user_data.sh.tpl
infra/environments/dev/: main.tf  variables.tf
infra/environments/prod/: main.tf  outputs.tf  variables.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/cognito/: main.tf  outputs.tf  variables.tf
migrations/: V1__init.sql  V2__registration_schema.sql  V3__events_schema.sql  V4__invite_date_joined.sql  V5__membership_fees_due_days.sql  V6__event_type_general.sql  V7__password_reset_tokens.sql  V8__seed_organisation.sql
scripts/: assume_role.sh  bootstrap_admin_cognito.sh  bootstrap_admin_db.sh
src/layer/: requirements.txt
src/shared/: db.py
test/: conftest.py  test_db.py  test_events.py  test_invite_request.py  test_login.py  test_members.py  test_memberships.py  test_password.py  test_payments.py  test_register.py  test_send_invite.py  test_validate_invite.py  utils.py
(+61 files in other folders)
